# PrimeWatch

./: CMakeLists.txt  README.md  client.cpp  client.h  debughelper.inc  main.cpp  metroidprimemodel.cpp  metroidprimemodel.h  primememorydump.cpp  primememorydump.h
QML/: main.qml
